// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 1. Gaussian linear, subsonic OFF — targetMag 1`] = `
[
  -64.874451,
  -64.6397,
  -64.404951,
  -64.170205,
  -63.935461,
  -63.700719,
  -63.46598,
  -63.231244,
  -62.99651,
  -62.761779,
  -62.52705,
  -62.292325,
  -62.057603,
  -61.822883,
  -61.588167,
  -61.353454,
  -61.118744,
  -60.884038,
  -60.649335,
  -60.414636,
  -60.17994,
  -59.945248,
  -59.71056,
  -59.475876,
  -59.241196,
  -59.006521,
  -58.77185,
  -58.537183,
  -58.30252,
  -58.067863,
  -57.83321,
  -57.598562,
  -57.36392,
  -57.129282,
  -56.89465,
  -56.660024,
  -56.425403,
  -56.190788,
  -55.956178,
  -55.721576,
  -55.486979,
  -55.252389,
  -55.017805,
  -54.783229,
  -54.548659,
  -54.314097,
  -54.079542,
  -53.844995,
  -53.610455,
  -53.375924,
  -53.141401,
  -52.906887,
  -52.672381,
  -52.437884,
  -52.203396,
  -51.968918,
  -51.73445,
  -51.499991,
  -51.265543,
  -51.031106,
  -50.796679,
  -50.562264,
  -50.32786,
  -50.093467,
  -49.859087,
  -49.624719,
  -49.390364,
  -49.156022,
  -48.921694,
  -48.687379,
  -48.453079,
  -48.218793,
  -47.984522,
  -47.750267,
  -47.516027,
  -47.281804,
  -47.047597,
  -46.813408,
  -46.579236,
  -46.345082,
  -46.110947,
  -45.876831,
  -45.642735,
  -45.408659,
  -45.174603,
  -44.940569,
  -44.706557,
  -44.472567,
  -44.238601,
  -44.004658,
  -43.77074,
  -43.536846,
  -43.302978,
  -43.069137,
  -42.835323,
  -42.601537,
  -42.367779,
  -42.134051,
  -41.900353,
  -41.666687,
  -41.433052,
  -41.19945,
  -40.965881,
  -40.732348,
  -40.498849,
  -40.265388,
  -40.031964,
  -39.798578,
  -39.565232,
  -39.331927,
  -39.098663,
  -38.865443,
  -38.632266,
  -38.399135,
  -38.16605,
  -37.933013,
  -37.700026,
  -37.467088,
  -37.234203,
  -37.001371,
  -36.768593,
  -36.535872,
  -36.303208,
  -36.070604,
  -35.838061,
  -35.60558,
  -35.373163,
  -35.140812,
  -34.908529,
  -34.676316,
  -34.444175,
  -34.212106,
  -33.980114,
  -33.748199,
  -33.516363,
  -33.284609,
  -33.05294,
  -32.821356,
  -32.589861,
  -32.358458,
  -32.127147,
  -31.895933,
  -31.664818,
  -31.433804,
  -31.202894,
  -30.972091,
  -30.741397,
  -30.510817,
  -30.280352,
  -30.050006,
  -29.819783,
  -29.589684,
  -29.359715,
  -29.129878,
  -28.900177,
  -28.670616,
  -28.441198,
  -28.211927,
  -27.982807,
  -27.753843,
  -27.525038,
  -27.296397,
  -27.067924,
  -26.839624,
  -26.611501,
  -26.38356,
  -26.155806,
  -25.928244,
  -25.700879,
  -25.473716,
  -25.246762,
  -25.02002,
  -24.793498,
  -24.567201,
  -24.341134,
  -24.115305,
  -23.88972,
  -23.664384,
  -23.439305,
  -23.214489,
  -22.989943,
  -22.765675,
  -22.541693,
  -22.318002,
  -22.094612,
  -21.87153,
  -21.648765,
  -21.426324,
  -21.204216,
  -20.982451,
  -20.761036,
  -20.539982,
  -20.319298,
  -20.098993,
  -19.879077,
  -19.659561,
  -19.440455,
  -19.221769,
  -19.003515,
  -18.785704,
  -18.568348,
  -18.351457,
  -18.135045,
  -17.919123,
  -17.703704,
  -17.488801,
  -17.274428,
  -17.060598,
  -16.847325,
  -16.634623,
  -16.422506,
  -16.21099,
  -16.00009,
  -15.789821,
  -15.580199,
  -15.371241,
  -15.162963,
  -14.955383,
  -14.748517,
  -14.542384,
  -14.337002,
  -14.132389,
  -13.928564,
  -13.725547,
  -13.523357,
  -13.322016,
  -13.121542,
  -12.921959,
  -12.723286,
  -12.525546,
  -12.328761,
  -12.132954,
  -11.938149,
  -11.744368,
  -11.551637,
  -11.359979,
  -11.16942,
  -10.979985,
  -10.791699,
  -10.604591,
  -10.418685,
  -10.234009,
  -10.050591,
  -9.868459,
  -9.687642,
  -9.508167,
  -9.330066,
  -9.153367,
  -8.9781,
  -8.804296,
  -8.631986,
  -8.461201,
  -8.291972,
  -8.124331,
  -7.958311,
  -7.793943,
  -7.631261,
  -7.470297,
  -7.311084,
  -7.153656,
  -6.998045,
  -6.844287,
  -6.692413,
  -6.542457,
  -6.394453,
  -6.248435,
  -6.104436,
  -5.962489,
  -5.822627,
  -5.684883,
  -5.549289,
  -5.415878,
  -5.28468,
  -5.155727,
  -5.02905,
  -4.904677,
  -4.782639,
  -4.662963,
  -4.545676,
  -4.430804,
  -4.318374,
  -4.208407,
  -4.100928,
  -3.995958,
  -3.893515,
  -3.793618,
  -3.696283,
  -3.601525,
  -3.509357,
  -3.419788,
  -3.332827,
  -3.24848,
  -3.166751,
  -3.087641,
  -3.011149,
  -2.93727,
  -2.865998,
  -2.797322,
  -2.731231,
  -2.667708,
  -2.606734,
  -2.548289,
  -2.492346,
  -2.438877,
  -2.387851,
  -2.339233,
  -2.292985,
  -2.249065,
  -2.207429,
  -2.168031,
  -2.130818,
  -2.095739,
  -2.062736,
  -2.031752,
  -2.002724,
  -1.97559,
  -1.950283,
  -1.926737,
  -1.904882,
  -1.884648,
  -1.865963,
  -1.848755,
  -1.832952,
  -1.81848,
  -1.805265,
  -1.793236,
  -1.782321,
  -1.772448,
  -1.763548,
  -1.755552,
  -1.748394,
  -1.74201,
  -1.736337,
  -1.731316,
  -1.726889,
  -1.723003,
  -1.719605,
  -1.716647,
  -1.714084,
  -1.711873,
  -1.709974,
  -1.708353,
  -1.706974,
  -1.705808,
  -1.704828,
  -1.704007,
  -1.703325,
  -1.70276,
  -1.702296,
  -1.701916,
  -1.701608,
  -1.701359,
  -1.70116,
  -1.701001,
  -1.700876,
  -1.700777,
  -1.7007,
  -1.700641,
  -1.700595,
  -1.70056,
  -1.700534,
  -1.700515,
  -1.7005,
  -1.700489,
  -1.700481,
  -1.700476,
  -1.700472,
  -1.700469,
  -1.700467,
  -1.700466,
  -1.700465,
  -1.700464,
  -1.700464,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 1. Gaussian linear, subsonic OFF — targetPhase 1`] = `
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 2. Gaussian linear, subsonic ON — targetMag 1`] = `
[
  -160.329987,
  -159.155901,
  -157.981817,
  -156.807736,
  -155.633658,
  -154.459581,
  -153.285508,
  -152.111436,
  -150.937368,
  -149.763302,
  -148.589239,
  -147.415179,
  -146.241122,
  -145.067068,
  -143.893017,
  -142.71897,
  -141.544925,
  -140.370884,
  -139.196847,
  -138.022813,
  -136.848783,
  -135.674756,
  -134.500734,
  -133.326715,
  -132.152701,
  -130.97869,
  -129.804685,
  -128.630683,
  -127.456686,
  -126.282694,
  -125.108707,
  -123.934725,
  -122.760748,
  -121.586776,
  -120.41281,
  -119.238849,
  -118.064894,
  -116.890945,
  -115.717002,
  -114.543066,
  -113.369136,
  -112.195213,
  -111.021297,
  -109.847388,
  -108.673487,
  -107.499594,
  -106.32571,
  -105.151834,
  -103.977968,
  -102.804112,
  -101.630266,
  -100.456432,
  -99.28261,
  -98.108801,
  -96.935007,
  -95.76123,
  -94.587471,
  -93.413732,
  -92.240017,
  -91.066328,
  -89.892671,
  -88.71905,
  -87.545472,
  -86.371944,
  -85.198476,
  -84.02508,
  -82.851771,
  -81.678567,
  -80.50549,
  -79.332569,
  -78.159838,
  -76.987339,
  -75.815126,
  -74.643264,
  -73.471834,
  -72.300936,
  -71.130695,
  -69.961265,
  -68.792835,
  -67.625641,
  -66.459973,
  -65.296189,
  -64.134728,
  -62.976132,
  -61.821064,
  -60.670334,
  -59.524929,
  -58.386046,
  -57.255125,
  -56.133892,
  -55.024394,
  -53.929036,
  -52.850603,
  -51.792273,
  -50.757601,
  -49.750469,
  -48.774993,
  -47.835377,
  -46.93572,
  -46.079783,
  -45.270729,
  -44.510885,
  -43.801541,
  -43.142841,
  -42.533765,
  -41.972221,
  -41.455228,
  -40.97915,
  -40.539945,
  -40.133419,
  -39.755421,
  -39.402004,
  -39.06953,
  -38.75473,
  -38.454725,
  -38.167025,
  -37.889499,
  -37.620351,
  -37.358077,
  -37.101427,
  -36.849368,
  -36.601054,
  -36.355789,
  -36.113007,
  -35.872249,
  -35.633139,
  -35.395376,
  -35.158714,
  -34.922955,
  -34.68794,
  -34.45354,
  -34.219652,
  -33.986192,
  -33.753096,
  -33.520308,
  -33.287787,
  -33.0555,
  -32.823418,
  -32.591523,
  -32.359796,
  -32.128225,
  -31.896802,
  -31.665517,
  -31.434367,
  -31.203348,
  -30.972456,
  -30.741692,
  -30.511054,
  -30.280543,
  -30.05016,
  -29.819907,
  -29.589784,
  -29.359796,
  -29.129943,
  -28.90023,
  -28.670658,
  -28.441232,
  -28.211954,
  -27.982829,
  -27.753861,
  -27.525052,
  -27.296409,
  -27.067933,
  -26.839631,
  -26.611507,
  -26.383565,
  -26.15581,
  -25.928247,
  -25.700881,
  -25.473718,
  -25.246763,
  -25.020022,
  -24.793499,
  -24.567202,
  -24.341135,
  -24.115306,
  -23.88972,
  -23.664384,
  -23.439305,
  -23.214489,
  -22.989943,
  -22.765676,
  -22.541693,
  -22.318002,
  -22.094612,
  -21.87153,
  -21.648765,
  -21.426324,
  -21.204216,
  -20.982451,
  -20.761036,
  -20.539982,
  -20.319298,
  -20.098993,
  -19.879077,
  -19.659561,
  -19.440455,
  -19.221769,
  -19.003515,
  -18.785704,
  -18.568348,
  -18.351457,
  -18.135045,
  -17.919123,
  -17.703704,
  -17.488801,
  -17.274428,
  -17.060598,
  -16.847325,
  -16.634623,
  -16.422506,
  -16.21099,
  -16.00009,
  -15.789821,
  -15.580199,
  -15.371241,
  -15.162963,
  -14.955383,
  -14.748517,
  -14.542384,
  -14.337002,
  -14.132389,
  -13.928564,
  -13.725547,
  -13.523357,
  -13.322016,
  -13.121542,
  -12.921959,
  -12.723286,
  -12.525546,
  -12.328761,
  -12.132954,
  -11.938149,
  -11.744368,
  -11.551637,
  -11.359979,
  -11.16942,
  -10.979985,
  -10.791699,
  -10.604591,
  -10.418685,
  -10.234009,
  -10.050591,
  -9.868459,
  -9.687642,
  -9.508167,
  -9.330066,
  -9.153367,
  -8.9781,
  -8.804296,
  -8.631986,
  -8.461201,
  -8.291972,
  -8.124331,
  -7.958311,
  -7.793943,
  -7.631261,
  -7.470297,
  -7.311084,
  -7.153656,
  -6.998045,
  -6.844287,
  -6.692413,
  -6.542457,
  -6.394453,
  -6.248435,
  -6.104436,
  -5.962489,
  -5.822627,
  -5.684883,
  -5.549289,
  -5.415878,
  -5.28468,
  -5.155727,
  -5.02905,
  -4.904677,
  -4.782639,
  -4.662963,
  -4.545676,
  -4.430804,
  -4.318374,
  -4.208407,
  -4.100928,
  -3.995958,
  -3.893515,
  -3.793618,
  -3.696283,
  -3.601525,
  -3.509357,
  -3.419788,
  -3.332827,
  -3.24848,
  -3.166751,
  -3.087641,
  -3.011149,
  -2.93727,
  -2.865998,
  -2.797322,
  -2.731231,
  -2.667708,
  -2.606734,
  -2.548289,
  -2.492346,
  -2.438877,
  -2.387851,
  -2.339233,
  -2.292985,
  -2.249065,
  -2.207429,
  -2.168031,
  -2.130818,
  -2.095739,
  -2.062736,
  -2.031752,
  -2.002724,
  -1.97559,
  -1.950283,
  -1.926737,
  -1.904882,
  -1.884648,
  -1.865963,
  -1.848755,
  -1.832952,
  -1.81848,
  -1.805265,
  -1.793236,
  -1.782321,
  -1.772448,
  -1.763548,
  -1.755552,
  -1.748394,
  -1.74201,
  -1.736337,
  -1.731316,
  -1.726889,
  -1.723003,
  -1.719605,
  -1.716647,
  -1.714084,
  -1.711873,
  -1.709974,
  -1.708353,
  -1.706974,
  -1.705808,
  -1.704828,
  -1.704007,
  -1.703325,
  -1.70276,
  -1.702296,
  -1.701916,
  -1.701608,
  -1.701359,
  -1.70116,
  -1.701001,
  -1.700876,
  -1.700777,
  -1.7007,
  -1.700641,
  -1.700595,
  -1.70056,
  -1.700534,
  -1.700515,
  -1.7005,
  -1.700489,
  -1.700481,
  -1.700476,
  -1.700472,
  -1.700469,
  -1.700467,
  -1.700466,
  -1.700465,
  -1.700464,
  -1.700464,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 2. Gaussian linear, subsonic ON — targetPhase 1`] = `
[
  0,
  0.469667,
  0.939335,
  1.409002,
  1.878669,
  2.348337,
  2.818004,
  3.287671,
  3.757339,
  4.227006,
  4.696673,
  5.166341,
  5.636008,
  6.105675,
  6.575342,
  7.04501,
  7.514677,
  7.984344,
  8.454012,
  8.923679,
  9.393346,
  9.863014,
  10.332681,
  10.802348,
  11.272016,
  11.741683,
  12.21135,
  12.681017,
  13.150685,
  13.620352,
  14.090019,
  14.559686,
  15.029354,
  15.499021,
  15.968688,
  16.438355,
  16.908022,
  17.377689,
  17.847356,
  18.317023,
  18.786689,
  19.256356,
  19.726022,
  20.195688,
  20.665354,
  21.135019,
  21.604684,
  22.074348,
  22.544011,
  23.013674,
  23.483335,
  23.952995,
  24.422653,
  24.892309,
  25.361962,
  25.831612,
  26.301257,
  26.770897,
  27.240531,
  27.710156,
  28.179772,
  28.649374,
  29.118962,
  29.588529,
  30.058073,
  30.527587,
  30.997064,
  31.466495,
  31.935869,
  32.405173,
  32.874388,
  33.343494,
  33.812466,
  34.281269,
  34.749864,
  35.218202,
  35.686219,
  36.153839,
  36.620968,
  37.087488,
  37.553255,
  38.018089,
  38.481771,
  38.944031,
  39.404538,
  39.862885,
  40.318582,
  40.771029,
  41.219506,
  41.663151,
  42.10094,
  42.531673,
  42.953955,
  43.3662,
  43.766629,
  44.153301,
  44.524161,
  44.877105,
  45.210084,
  45.52122,
  45.808929,
  46.07205,
  46.309938,
  46.522521,
  46.71031,
  46.874351,
  47.016135,
  47.137482,
  47.240411,
  47.327021,
  47.399389,
  47.459487,
  47.509136,
  47.54997,
  47.58343,
  47.610762,
  47.633031,
  47.651136,
  47.665831,
  47.67774,
  47.68738,
  47.695177,
  47.701477,
  47.706566,
  47.710673,
  47.713988,
  47.716661,
  47.718817,
  47.720555,
  47.721956,
  47.723085,
  47.723995,
  47.724728,
  47.725319,
  47.725795,
  47.726179,
  47.726488,
  47.726737,
  47.726937,
  47.727099,
  47.727229,
  47.727333,
  47.727418,
  47.727486,
  47.727541,
  47.727585,
  47.72762,
  47.727649,
  47.727672,
  47.727691,
  47.727706,
  47.727718,
  47.727727,
  47.727735,
  47.727742,
  47.727747,
  47.727751,
  47.727754,
  47.727757,
  47.727759,
  47.727761,
  47.727762,
  47.727763,
  47.727764,
  47.727765,
  47.727765,
  47.727766,
  47.727766,
  47.727766,
  47.727767,
  47.727767,
  47.727767,
  47.727767,
  47.727767,
  47.727767,
  47.727767,
  47.727767,
  47.727767,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
  47.727768,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 3. Gaussian min-phase, subsonic OFF — targetMag 1`] = `
[
  -64.874451,
  -64.6397,
  -64.404951,
  -64.170205,
  -63.935461,
  -63.700719,
  -63.46598,
  -63.231244,
  -62.99651,
  -62.761779,
  -62.52705,
  -62.292325,
  -62.057603,
  -61.822883,
  -61.588167,
  -61.353454,
  -61.118744,
  -60.884038,
  -60.649335,
  -60.414636,
  -60.17994,
  -59.945248,
  -59.71056,
  -59.475876,
  -59.241196,
  -59.006521,
  -58.77185,
  -58.537183,
  -58.30252,
  -58.067863,
  -57.83321,
  -57.598562,
  -57.36392,
  -57.129282,
  -56.89465,
  -56.660024,
  -56.425403,
  -56.190788,
  -55.956178,
  -55.721576,
  -55.486979,
  -55.252389,
  -55.017805,
  -54.783229,
  -54.548659,
  -54.314097,
  -54.079542,
  -53.844995,
  -53.610455,
  -53.375924,
  -53.141401,
  -52.906887,
  -52.672381,
  -52.437884,
  -52.203396,
  -51.968918,
  -51.73445,
  -51.499991,
  -51.265543,
  -51.031106,
  -50.796679,
  -50.562264,
  -50.32786,
  -50.093467,
  -49.859087,
  -49.624719,
  -49.390364,
  -49.156022,
  -48.921694,
  -48.687379,
  -48.453079,
  -48.218793,
  -47.984522,
  -47.750267,
  -47.516027,
  -47.281804,
  -47.047597,
  -46.813408,
  -46.579236,
  -46.345082,
  -46.110947,
  -45.876831,
  -45.642735,
  -45.408659,
  -45.174603,
  -44.940569,
  -44.706557,
  -44.472567,
  -44.238601,
  -44.004658,
  -43.77074,
  -43.536846,
  -43.302978,
  -43.069137,
  -42.835323,
  -42.601537,
  -42.367779,
  -42.134051,
  -41.900353,
  -41.666687,
  -41.433052,
  -41.19945,
  -40.965881,
  -40.732348,
  -40.498849,
  -40.265388,
  -40.031964,
  -39.798578,
  -39.565232,
  -39.331927,
  -39.098663,
  -38.865443,
  -38.632266,
  -38.399135,
  -38.16605,
  -37.933013,
  -37.700026,
  -37.467088,
  -37.234203,
  -37.001371,
  -36.768593,
  -36.535872,
  -36.303208,
  -36.070604,
  -35.838061,
  -35.60558,
  -35.373163,
  -35.140812,
  -34.908529,
  -34.676316,
  -34.444175,
  -34.212106,
  -33.980114,
  -33.748199,
  -33.516363,
  -33.284609,
  -33.05294,
  -32.821356,
  -32.589861,
  -32.358458,
  -32.127147,
  -31.895933,
  -31.664818,
  -31.433804,
  -31.202894,
  -30.972091,
  -30.741397,
  -30.510817,
  -30.280352,
  -30.050006,
  -29.819783,
  -29.589684,
  -29.359715,
  -29.129878,
  -28.900177,
  -28.670616,
  -28.441198,
  -28.211927,
  -27.982807,
  -27.753843,
  -27.525038,
  -27.296397,
  -27.067924,
  -26.839624,
  -26.611501,
  -26.38356,
  -26.155806,
  -25.928244,
  -25.700879,
  -25.473716,
  -25.246762,
  -25.02002,
  -24.793498,
  -24.567201,
  -24.341134,
  -24.115305,
  -23.88972,
  -23.664384,
  -23.439305,
  -23.214489,
  -22.989943,
  -22.765675,
  -22.541693,
  -22.318002,
  -22.094612,
  -21.87153,
  -21.648765,
  -21.426324,
  -21.204216,
  -20.982451,
  -20.761036,
  -20.539982,
  -20.319298,
  -20.098993,
  -19.879077,
  -19.659561,
  -19.440455,
  -19.221769,
  -19.003515,
  -18.785704,
  -18.568348,
  -18.351457,
  -18.135045,
  -17.919123,
  -17.703704,
  -17.488801,
  -17.274428,
  -17.060598,
  -16.847325,
  -16.634623,
  -16.422506,
  -16.21099,
  -16.00009,
  -15.789821,
  -15.580199,
  -15.371241,
  -15.162963,
  -14.955383,
  -14.748517,
  -14.542384,
  -14.337002,
  -14.132389,
  -13.928564,
  -13.725547,
  -13.523357,
  -13.322016,
  -13.121542,
  -12.921959,
  -12.723286,
  -12.525546,
  -12.328761,
  -12.132954,
  -11.938149,
  -11.744368,
  -11.551637,
  -11.359979,
  -11.16942,
  -10.979985,
  -10.791699,
  -10.604591,
  -10.418685,
  -10.234009,
  -10.050591,
  -9.868459,
  -9.687642,
  -9.508167,
  -9.330066,
  -9.153367,
  -8.9781,
  -8.804296,
  -8.631986,
  -8.461201,
  -8.291972,
  -8.124331,
  -7.958311,
  -7.793943,
  -7.631261,
  -7.470297,
  -7.311084,
  -7.153656,
  -6.998045,
  -6.844287,
  -6.692413,
  -6.542457,
  -6.394453,
  -6.248435,
  -6.104436,
  -5.962489,
  -5.822627,
  -5.684883,
  -5.549289,
  -5.415878,
  -5.28468,
  -5.155727,
  -5.02905,
  -4.904677,
  -4.782639,
  -4.662963,
  -4.545676,
  -4.430804,
  -4.318374,
  -4.208407,
  -4.100928,
  -3.995958,
  -3.893515,
  -3.793618,
  -3.696283,
  -3.601525,
  -3.509357,
  -3.419788,
  -3.332827,
  -3.24848,
  -3.166751,
  -3.087641,
  -3.011149,
  -2.93727,
  -2.865998,
  -2.797322,
  -2.731231,
  -2.667708,
  -2.606734,
  -2.548289,
  -2.492346,
  -2.438877,
  -2.387851,
  -2.339233,
  -2.292985,
  -2.249065,
  -2.207429,
  -2.168031,
  -2.130818,
  -2.095739,
  -2.062736,
  -2.031752,
  -2.002724,
  -1.97559,
  -1.950283,
  -1.926737,
  -1.904882,
  -1.884648,
  -1.865963,
  -1.848755,
  -1.832952,
  -1.81848,
  -1.805265,
  -1.793236,
  -1.782321,
  -1.772448,
  -1.763548,
  -1.755552,
  -1.748394,
  -1.74201,
  -1.736337,
  -1.731316,
  -1.726889,
  -1.723003,
  -1.719605,
  -1.716647,
  -1.714084,
  -1.711873,
  -1.709974,
  -1.708353,
  -1.706974,
  -1.705808,
  -1.704828,
  -1.704007,
  -1.703325,
  -1.70276,
  -1.702296,
  -1.701916,
  -1.701608,
  -1.701359,
  -1.70116,
  -1.701001,
  -1.700876,
  -1.700777,
  -1.7007,
  -1.700641,
  -1.700595,
  -1.70056,
  -1.700534,
  -1.700515,
  -1.7005,
  -1.700489,
  -1.700481,
  -1.700476,
  -1.700472,
  -1.700469,
  -1.700467,
  -1.700466,
  -1.700465,
  -1.700464,
  -1.700464,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 3. Gaussian min-phase, subsonic OFF — targetPhase 1`] = `
[
  0,
  0.117376,
  0.23475,
  0.352123,
  0.469495,
  0.586866,
  0.704236,
  0.821604,
  0.938971,
  1.056336,
  1.1737,
  1.291063,
  1.408424,
  1.525784,
  1.643142,
  1.760499,
  1.877854,
  1.995207,
  2.112558,
  2.229908,
  2.347256,
  2.464602,
  2.581946,
  2.699287,
  2.816627,
  2.933965,
  3.051301,
  3.168634,
  3.285965,
  3.403294,
  3.520621,
  3.637944,
  3.755266,
  3.872585,
  3.989901,
  4.107214,
  4.224524,
  4.341832,
  4.459136,
  4.576438,
  4.693736,
  4.811031,
  4.928323,
  5.045611,
  5.162896,
  5.280177,
  5.397455,
  5.514728,
  5.631998,
  5.749264,
  5.866525,
  5.983782,
  6.101035,
  6.218284,
  6.335527,
  6.452767,
  6.570001,
  6.68723,
  6.804454,
  6.921673,
  7.038886,
  7.156094,
  7.273296,
  7.390492,
  7.507682,
  7.624866,
  7.742044,
  7.859215,
  7.976379,
  8.093536,
  8.210686,
  8.327829,
  8.444965,
  8.562092,
  8.679212,
  8.796324,
  8.913427,
  9.030522,
  9.147608,
  9.264685,
  9.381752,
  9.49881,
  9.615858,
  9.732896,
  9.849924,
  9.966941,
  10.083947,
  10.200942,
  10.317925,
  10.434897,
  10.551856,
  10.668803,
  10.785736,
  10.902657,
  11.019564,
  11.136457,
  11.253336,
  11.3702,
  11.487049,
  11.603882,
  11.7207,
  11.837501,
  11.954285,
  12.071052,
  12.187801,
  12.304532,
  12.421244,
  12.537937,
  12.65461,
  12.771262,
  12.887894,
  13.004504,
  13.121093,
  13.237658,
  13.3542,
  13.470719,
  13.587213,
  13.703681,
  13.820124,
  13.93654,
  14.052929,
  14.16929,
  14.285621,
  14.401924,
  14.518195,
  14.634436,
  14.750644,
  14.866819,
  14.982961,
  15.099067,
  15.215138,
  15.331172,
  15.447169,
  15.563126,
  15.679044,
  15.794921,
  15.910756,
  16.026548,
  16.142295,
  16.257997,
  16.373652,
  16.489259,
  16.604817,
  16.720324,
  16.835779,
  16.95118,
  17.066527,
  17.181817,
  17.29705,
  17.412223,
  17.527334,
  17.642383,
  17.757368,
  17.872286,
  17.987137,
  18.101918,
  18.216627,
  18.331262,
  18.445822,
  18.560304,
  18.674707,
  18.789027,
  18.903264,
  19.017414,
  19.131475,
  19.245446,
  19.359323,
  19.473104,
  19.586786,
  19.700368,
  19.813845,
  19.927216,
  20.040477,
  20.153625,
  20.266658,
  20.379573,
  20.492366,
  20.605034,
  20.717573,
  20.829981,
  20.942254,
  21.054388,
  21.166379,
  21.278224,
  21.38992,
  21.50146,
  21.612843,
  21.724064,
  21.835117,
  21.946,
  22.056707,
  22.167235,
  22.277577,
  22.387729,
  22.497687,
  22.607445,
  22.716998,
  22.826341,
  22.935468,
  23.044374,
  23.153052,
  23.261497,
  23.369703,
  23.477664,
  23.585374,
  23.692825,
  23.800011,
  23.906927,
  24.013563,
  24.119914,
  24.225973,
  24.331731,
  24.437181,
  24.542315,
  24.647126,
  24.751605,
  24.855744,
  24.959534,
  25.062967,
  25.166034,
  25.268725,
  25.371031,
  25.472944,
  25.574452,
  25.675547,
  25.776218,
  25.876454,
  25.976246,
  26.075583,
  26.174453,
  26.272845,
  26.370748,
  26.468151,
  26.565041,
  26.661407,
  26.757236,
  26.852516,
  26.947233,
  27.041376,
  27.13493,
  27.227883,
  27.320221,
  27.41193,
  27.502996,
  27.593405,
  27.683142,
  27.772193,
  27.860542,
  27.948176,
  28.035078,
  28.121233,
  28.206625,
  28.29124,
  28.37506,
  28.45807,
  28.540254,
  28.621595,
  28.702077,
  28.781684,
  28.860398,
  28.938203,
  29.015082,
  29.091019,
  29.165997,
  29.239999,
  29.313008,
  29.385007,
  29.455981,
  29.525912,
  29.594784,
  29.662581,
  29.729287,
  29.794886,
  29.859362,
  29.922701,
  29.984887,
  30.045906,
  30.105744,
  30.164388,
  30.221824,
  30.278039,
  30.333022,
  30.386761,
  30.439247,
  30.490468,
  30.540417,
  30.589084,
  30.636463,
  30.682547,
  30.727332,
  30.770812,
  30.812985,
  30.85385,
  30.893405,
  30.931651,
  30.968591,
  31.004227,
  31.038565,
  31.07161,
  31.103372,
  31.133858,
  31.163081,
  31.191053,
  31.217787,
  31.2433,
  31.267609,
  31.290733,
  31.312693,
  31.333511,
  31.35321,
  31.371817,
  31.389356,
  31.405858,
  31.42135,
  31.435864,
  31.449431,
  31.462084,
  31.473857,
  31.484785,
  31.494902,
  31.504244,
  31.512848,
  31.52075,
  31.527986,
  31.534593,
  31.540607,
  31.546065,
  31.551002,
  31.555452,
  31.55945,
  31.563028,
  31.566221,
  31.569057,
  31.571568,
  31.573781,
  31.575724,
  31.577423,
  31.578902,
  31.580184,
  31.581289,
  31.582238,
  31.583049,
  31.583739,
  31.584321,
  31.584812,
  31.585222,
  31.585563,
  31.585846,
  31.586078,
  31.586268,
  31.586422,
  31.586546,
  31.586646,
  31.586725,
  31.586788,
  31.586837,
  31.586876,
  31.586905,
  31.586928,
  31.586945,
  31.586959,
  31.586968,
  31.586976,
  31.586981,
  31.586985,
  31.586988,
  31.58699,
  31.586991,
  31.586992,
  31.586993,
  31.586993,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
  31.586994,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 4. Gaussian min-phase, subsonic ON — targetMag 1`] = `
[
  -160.329987,
  -159.155901,
  -157.981817,
  -156.807736,
  -155.633658,
  -154.459581,
  -153.285508,
  -152.111436,
  -150.937368,
  -149.763302,
  -148.589239,
  -147.415179,
  -146.241122,
  -145.067068,
  -143.893017,
  -142.71897,
  -141.544925,
  -140.370884,
  -139.196847,
  -138.022813,
  -136.848783,
  -135.674756,
  -134.500734,
  -133.326715,
  -132.152701,
  -130.97869,
  -129.804685,
  -128.630683,
  -127.456686,
  -126.282694,
  -125.108707,
  -123.934725,
  -122.760748,
  -121.586776,
  -120.41281,
  -119.238849,
  -118.064894,
  -116.890945,
  -115.717002,
  -114.543066,
  -113.369136,
  -112.195213,
  -111.021297,
  -109.847388,
  -108.673487,
  -107.499594,
  -106.32571,
  -105.151834,
  -103.977968,
  -102.804112,
  -101.630266,
  -100.456432,
  -99.28261,
  -98.108801,
  -96.935007,
  -95.76123,
  -94.587471,
  -93.413732,
  -92.240017,
  -91.066328,
  -89.892671,
  -88.71905,
  -87.545472,
  -86.371944,
  -85.198476,
  -84.02508,
  -82.851771,
  -81.678567,
  -80.50549,
  -79.332569,
  -78.159838,
  -76.987339,
  -75.815126,
  -74.643264,
  -73.471834,
  -72.300936,
  -71.130695,
  -69.961265,
  -68.792835,
  -67.625641,
  -66.459973,
  -65.296189,
  -64.134728,
  -62.976132,
  -61.821064,
  -60.670334,
  -59.524929,
  -58.386046,
  -57.255125,
  -56.133892,
  -55.024394,
  -53.929036,
  -52.850603,
  -51.792273,
  -50.757601,
  -49.750469,
  -48.774993,
  -47.835377,
  -46.93572,
  -46.079783,
  -45.270729,
  -44.510885,
  -43.801541,
  -43.142841,
  -42.533765,
  -41.972221,
  -41.455228,
  -40.97915,
  -40.539945,
  -40.133419,
  -39.755421,
  -39.402004,
  -39.06953,
  -38.75473,
  -38.454725,
  -38.167025,
  -37.889499,
  -37.620351,
  -37.358077,
  -37.101427,
  -36.849368,
  -36.601054,
  -36.355789,
  -36.113007,
  -35.872249,
  -35.633139,
  -35.395376,
  -35.158714,
  -34.922955,
  -34.68794,
  -34.45354,
  -34.219652,
  -33.986192,
  -33.753096,
  -33.520308,
  -33.287787,
  -33.0555,
  -32.823418,
  -32.591523,
  -32.359796,
  -32.128225,
  -31.896802,
  -31.665517,
  -31.434367,
  -31.203348,
  -30.972456,
  -30.741692,
  -30.511054,
  -30.280543,
  -30.05016,
  -29.819907,
  -29.589784,
  -29.359796,
  -29.129943,
  -28.90023,
  -28.670658,
  -28.441232,
  -28.211954,
  -27.982829,
  -27.753861,
  -27.525052,
  -27.296409,
  -27.067933,
  -26.839631,
  -26.611507,
  -26.383565,
  -26.15581,
  -25.928247,
  -25.700881,
  -25.473718,
  -25.246763,
  -25.020022,
  -24.793499,
  -24.567202,
  -24.341135,
  -24.115306,
  -23.88972,
  -23.664384,
  -23.439305,
  -23.214489,
  -22.989943,
  -22.765676,
  -22.541693,
  -22.318002,
  -22.094612,
  -21.87153,
  -21.648765,
  -21.426324,
  -21.204216,
  -20.982451,
  -20.761036,
  -20.539982,
  -20.319298,
  -20.098993,
  -19.879077,
  -19.659561,
  -19.440455,
  -19.221769,
  -19.003515,
  -18.785704,
  -18.568348,
  -18.351457,
  -18.135045,
  -17.919123,
  -17.703704,
  -17.488801,
  -17.274428,
  -17.060598,
  -16.847325,
  -16.634623,
  -16.422506,
  -16.21099,
  -16.00009,
  -15.789821,
  -15.580199,
  -15.371241,
  -15.162963,
  -14.955383,
  -14.748517,
  -14.542384,
  -14.337002,
  -14.132389,
  -13.928564,
  -13.725547,
  -13.523357,
  -13.322016,
  -13.121542,
  -12.921959,
  -12.723286,
  -12.525546,
  -12.328761,
  -12.132954,
  -11.938149,
  -11.744368,
  -11.551637,
  -11.359979,
  -11.16942,
  -10.979985,
  -10.791699,
  -10.604591,
  -10.418685,
  -10.234009,
  -10.050591,
  -9.868459,
  -9.687642,
  -9.508167,
  -9.330066,
  -9.153367,
  -8.9781,
  -8.804296,
  -8.631986,
  -8.461201,
  -8.291972,
  -8.124331,
  -7.958311,
  -7.793943,
  -7.631261,
  -7.470297,
  -7.311084,
  -7.153656,
  -6.998045,
  -6.844287,
  -6.692413,
  -6.542457,
  -6.394453,
  -6.248435,
  -6.104436,
  -5.962489,
  -5.822627,
  -5.684883,
  -5.549289,
  -5.415878,
  -5.28468,
  -5.155727,
  -5.02905,
  -4.904677,
  -4.782639,
  -4.662963,
  -4.545676,
  -4.430804,
  -4.318374,
  -4.208407,
  -4.100928,
  -3.995958,
  -3.893515,
  -3.793618,
  -3.696283,
  -3.601525,
  -3.509357,
  -3.419788,
  -3.332827,
  -3.24848,
  -3.166751,
  -3.087641,
  -3.011149,
  -2.93727,
  -2.865998,
  -2.797322,
  -2.731231,
  -2.667708,
  -2.606734,
  -2.548289,
  -2.492346,
  -2.438877,
  -2.387851,
  -2.339233,
  -2.292985,
  -2.249065,
  -2.207429,
  -2.168031,
  -2.130818,
  -2.095739,
  -2.062736,
  -2.031752,
  -2.002724,
  -1.97559,
  -1.950283,
  -1.926737,
  -1.904882,
  -1.884648,
  -1.865963,
  -1.848755,
  -1.832952,
  -1.81848,
  -1.805265,
  -1.793236,
  -1.782321,
  -1.772448,
  -1.763548,
  -1.755552,
  -1.748394,
  -1.74201,
  -1.736337,
  -1.731316,
  -1.726889,
  -1.723003,
  -1.719605,
  -1.716647,
  -1.714084,
  -1.711873,
  -1.709974,
  -1.708353,
  -1.706974,
  -1.705808,
  -1.704828,
  -1.704007,
  -1.703325,
  -1.70276,
  -1.702296,
  -1.701916,
  -1.701608,
  -1.701359,
  -1.70116,
  -1.701001,
  -1.700876,
  -1.700777,
  -1.7007,
  -1.700641,
  -1.700595,
  -1.70056,
  -1.700534,
  -1.700515,
  -1.7005,
  -1.700489,
  -1.700481,
  -1.700476,
  -1.700472,
  -1.700469,
  -1.700467,
  -1.700466,
  -1.700465,
  -1.700464,
  -1.700464,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
  -1.700463,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 4. Gaussian min-phase, subsonic ON — targetPhase 1`] = `
[
  0,
  0.587043,
  1.174085,
  1.761125,
  2.348164,
  2.935203,
  3.522239,
  4.109275,
  4.696309,
  5.283342,
  5.870374,
  6.457404,
  7.044432,
  7.631459,
  8.218485,
  8.805508,
  9.392531,
  9.979551,
  10.56657,
  11.153587,
  11.740602,
  12.327615,
  12.914626,
  13.501636,
  14.088643,
  14.675648,
  15.262651,
  15.849652,
  16.43665,
  17.023646,
  17.61064,
  18.197631,
  18.784619,
  19.371605,
  19.958588,
  20.545569,
  21.132546,
  21.719521,
  22.306492,
  22.89346,
  23.480425,
  24.067387,
  24.654345,
  25.241299,
  25.82825,
  26.415196,
  27.002138,
  27.589076,
  28.176009,
  28.762937,
  29.34986,
  29.936777,
  30.523688,
  31.110593,
  31.69749,
  32.284378,
  32.871258,
  33.458127,
  34.044985,
  34.631829,
  35.218658,
  35.805468,
  36.392258,
  36.979021,
  37.565755,
  38.152453,
  38.739108,
  39.32571,
  39.912248,
  40.498709,
  41.085074,
  41.671324,
  42.25743,
  42.843361,
  43.429076,
  44.014525,
  44.599646,
  45.184361,
  45.768576,
  46.352173,
  46.935007,
  47.516899,
  48.097629,
  48.676927,
  49.254461,
  49.829826,
  50.402529,
  50.971971,
  51.537431,
  52.098047,
  52.652796,
  53.200475,
  53.739692,
  54.268857,
  54.786193,
  55.289759,
  55.777497,
  56.247305,
  56.697133,
  57.125102,
  57.529629,
  57.909551,
  58.264223,
  58.593573,
  58.898111,
  59.178883,
  59.437379,
  59.675419,
  59.895021,
  60.098284,
  60.287283,
  60.463991,
  60.630228,
  60.787628,
  60.937631,
  61.081481,
  61.220244,
  61.354818,
  61.485955,
  61.61428,
  61.740309,
  61.864466,
  61.987099,
  62.10849,
  62.228869,
  62.348424,
  62.467305,
  62.585636,
  62.703516,
  62.821023,
  62.938223,
  63.055167,
  63.171897,
  63.288445,
  63.404839,
  63.5211,
  63.637243,
  63.753284,
  63.869232,
  63.985095,
  64.100881,
  64.216592,
  64.332235,
  64.44781,
  64.563319,
  64.678765,
  64.794147,
  64.909466,
  65.024722,
  65.139913,
  65.25504,
  65.370101,
  65.485095,
  65.600022,
  65.714879,
  65.829664,
  65.944377,
  66.059016,
  66.173579,
  66.288063,
  66.402467,
  66.516789,
  66.631027,
  66.745178,
  66.85924,
  66.973211,
  67.087088,
  67.20087,
  67.314553,
  67.428134,
  67.541612,
  67.654982,
  67.768244,
  67.881392,
  67.994426,
  68.10734,
  68.220133,
  68.332801,
  68.445341,
  68.557749,
  68.670022,
  68.782155,
  68.894147,
  69.005992,
  69.117687,
  69.229228,
  69.340611,
  69.451831,
  69.562885,
  69.673768,
  69.784475,
  69.895002,
  70.005344,
  70.115497,
  70.225455,
  70.335213,
  70.444766,
  70.554109,
  70.663236,
  70.772141,
  70.88082,
  70.989265,
  71.097471,
  71.205432,
  71.313141,
  71.420593,
  71.527779,
  71.634694,
  71.741331,
  71.847682,
  71.95374,
  72.059498,
  72.164948,
  72.270083,
  72.374894,
  72.479373,
  72.583512,
  72.687302,
  72.790735,
  72.893801,
  72.996492,
  73.098799,
  73.200711,
  73.30222,
  73.403315,
  73.503985,
  73.604222,
  73.704014,
  73.80335,
  73.90222,
  74.000613,
  74.098516,
  74.195919,
  74.292809,
  74.389175,
  74.485004,
  74.580283,
  74.675001,
  74.769144,
  74.862698,
  74.955651,
  75.047989,
  75.139698,
  75.230764,
  75.321172,
  75.41091,
  75.49996,
  75.58831,
  75.675943,
  75.762845,
  75.849,
  75.934393,
  76.019007,
  76.102828,
  76.185838,
  76.268022,
  76.349363,
  76.429845,
  76.509451,
  76.588165,
  76.665971,
  76.74285,
  76.818787,
  76.893765,
  76.967767,
  77.040776,
  77.112775,
  77.183749,
  77.25368,
  77.322552,
  77.390349,
  77.457054,
  77.522653,
  77.58713,
  77.650468,
  77.712655,
  77.773674,
  77.833512,
  77.892155,
  77.949591,
  78.005807,
  78.06079,
  78.114529,
  78.167015,
  78.218236,
  78.268184,
  78.316852,
  78.364231,
  78.410315,
  78.455099,
  78.49858,
  78.540753,
  78.581618,
  78.621173,
  78.659419,
  78.696358,
  78.731994,
  78.766332,
  78.799378,
  78.831139,
  78.861626,
  78.890849,
  78.91882,
  78.945555,
  78.971068,
  78.995377,
  79.018501,
  79.040461,
  79.061279,
  79.080978,
  79.099584,
  79.117124,
  79.133625,
  79.149117,
  79.163631,
  79.177199,
  79.189852,
  79.201625,
  79.212552,
  79.222669,
  79.232012,
  79.240616,
  79.248517,
  79.255754,
  79.262361,
  79.268375,
  79.273833,
  79.278769,
  79.283219,
  79.287217,
  79.290796,
  79.293988,
  79.296825,
  79.299335,
  79.301549,
  79.303492,
  79.305191,
  79.30667,
  79.307951,
  79.309057,
  79.310006,
  79.310817,
  79.311506,
  79.312089,
  79.312579,
  79.31299,
  79.313331,
  79.313613,
  79.313845,
  79.314035,
  79.314189,
  79.314314,
  79.314413,
  79.314493,
  79.314556,
  79.314605,
  79.314643,
  79.314673,
  79.314696,
  79.314713,
  79.314726,
  79.314736,
  79.314743,
  79.314749,
  79.314753,
  79.314755,
  79.314757,
  79.314759,
  79.31476,
  79.314761,
  79.314761,
  79.314761,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
  79.314762,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 5. LR4 baseline (non-Gaussian) — targetMag 1`] = `
[
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
  -0.961341,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 5. LR4 baseline (non-Gaussian) — targetPhase 1`] = `
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 6. No HP (full-range) — targetMag 1`] = `
[
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
  -1.371151,
]
`;

exports[`evaluateBandFull (b139.1) > snapshot — targetPhase + targetMag for 6 fixtures > 6. No HP (full-range) — targetPhase 1`] = `
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;
